@@ -25,7 +25,7 @@ liblatency_rt_a_CPPFLAGS = \
 	-I../../../rtai-core/include
 
 latency_rt.o: liblatency_rt.a
-	$(CROSS_COMPILE)$(LD) --whole-archive $< -r -o $@
+	$(CROSS_COMPILE)ld --whole-archive $< -r -o $@
 endif
 
 test_PROGRAMS = display
