@@ -735,7 +735,7 @@ uninstall-am: uninstall-info-am uninstall-testPROGRAMS
 @CONFIG_KBUILD_TRUE@	@RTAI_KBUILD_CLEAN@
 
 @CONFIG_KBUILD_FALSE@preempt_rt.o: libpreempt_rt.a
-@CONFIG_KBUILD_FALSE@	$(CROSS_COMPILE)$(LD) --whole-archive $< -r -o $@
+@CONFIG_KBUILD_FALSE@	$(CROSS_COMPILE)ld --whole-archive $< -r -o $@
 
 all-local: preempt_rt$(modext)
 
